Reverting to 8736e94 because removing transition did'nt fix the slow animation on mobile

--- a/src/styles/GlobalStyles.scss
+++ b/src/styles/GlobalStyles.scss
@@ -71,7 +71,7 @@ body {
   font-size: 2rem;
   color: var(--tertiary);
   background: var(--primary);
-  // transition: all 0.3s;
+  transition: all 0.3s;
   height: 100%;
   width: 100%;
   overflow-x: hidden;
